--- a/app/views/static_pages/info.html.erb
+++ b/app/views/static_pages/info.html.erb
@@ -4,9 +4,6 @@
 		<h3>Informacoes uteis</h3>
 		<div class="inner-box">
 
-
-
-
 			<div class="accordion" id="accordion2">
 				<div class="accordion-group">
 					<div class="accordion-heading">
@@ -20,9 +17,9 @@
 					<div id="collapse1" class="accordion-body collapse">
 						<div class="accordion-inner">
 							<ul class="nav nav-pills nav-stacked"> 
-								<li><%= link_to 'Embaixadas extrangeiras no Brasil', 'http://www.itamaraty.gov.br/cerimonial/corpo-diplomatico/lista'%></li>
-								<li><%= link_to 'Consulados extrangeiros no Brasil', 'http://www.itamaraty.gov.br/servicos-do-itamaraty/enderecos-de-consulados-estrangeiros-no-brasil'%></li>
-								<li><%= link_to 'Representacoes do Brasil no exterior', 'http://www.itamaraty.gov.br/o-ministerio/o-brasil-no-exterior'%></li>
+								<li><%= link_to 'Embaixadas extrangeiras no Brasil', 'http://www.itamaraty.gov.br/cerimonial/corpo-diplomatico/lista', target: '_blank'%></li>
+								<li><%= link_to 'Consulados extrangeiros no Brasil', 'http://www.itamaraty.gov.br/servicos-do-itamaraty/enderecos-de-consulados-estrangeiros-no-brasil', target: '_blank'%></li>
+								<li><%= link_to 'Representacoes do Brasil no exterior', 'http://www.itamaraty.gov.br/o-ministerio/o-brasil-no-exterior', target: '_blank'%></li>
 							</ul>
 						</div>
 					</div>
@@ -97,25 +94,25 @@
   				<li class="span2">
     				<div class="thumbnail">
       					<%= image_tag 'thumb0.png'%>
-      					<strong><%= link_to 'Consulta de voos', 'http://www.infraero.gov.br/voos/index.aspx'%></strong>
+      					<strong><%= link_to 'Consulta de voos', 'http://www.infraero.gov.br/voos/index.aspx', target: '_blank'%></strong>
     				</div>
   				</li>
   				<li class="span2">
     				<div class="thumbnail">
       					<%= image_tag 'thumb1.png' %>
-      					<strong><%= link_to 'Fuso horario', 'http://www2.tursites.com.br/cache/mapa_fuso2.htm'%></strong>
+      					<strong><%= link_to 'Fuso horario', 'http://www2.tursites.com.br/cache/mapa_fuso2.htm', target: '_blank'%></strong>
     				</div>
   				</li>
   				<li class="span2">
     				<div class="thumbnail">
       					<%= image_tag 'thumb2.png'%>
-      					<strong><%= link_to 'Visto americano', 'http://portuguese.brazil.usembassy.gov/pt/visas.html'%></strong>
+      					<strong><%= link_to 'Visto americano', 'http://portuguese.brazil.usembassy.gov/pt/visas.html', target: '_blank'%></strong>
     				</div>
   				</li>
   				<li class="span2">
     				<div class="thumbnail">
       					<%= image_tag 'thumb3.png'%>
-      					<strong><%= link_to 'Comunidade europeia', 'http://europa.eu/index_pt.htm'%></strong>
+      					<strong><%= link_to 'Comunidade europeia', 'http://europa.eu/index_pt.htm', target: '_blank'%></strong>
     				</div>
   				</li>
 			</ul>
