--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -50,22 +50,22 @@
 						<div id="myCarousel2" class="carousel slide">
 							<div class="carousel-inner">
         						<div class="item active">
-            						<div class="span4"><%= link_to image_tag(@pb[0].image.to_s), @pb[0].pdf.to_s if @pb[0] %></div>
-            						<div class="span4"><%= link_to image_tag(@pb[1].image.to_s), @pb[1].pdf.to_s if @pb[1] %></div>
-            						<div class="span4"><%= link_to image_tag(@pb[2].image.to_s), @pb[2].pdf.to_s if @pb[2] %></div>
+            						<div class="span4"><%= link_to image_tag(@pb[0].image.to_s), @pb[0].pdf.to_s, target: '_blank' if @pb[0] %></div>
+            						<div class="span4"><%= link_to image_tag(@pb[1].image.to_s), @pb[1].pdf.to_s, target: '_blank' if @pb[1] %></div>
+            						<div class="span4"><%= link_to image_tag(@pb[2].image.to_s), @pb[2].pdf.to_s, target: '_blank' if @pb[2] %></div>
 				            	</div>
 				            	<%if @pb.size>3%>
             					<div class="item">
-            						<div class="span4"><%= link_to image_tag(@pb[3].image.to_s), @pb[3].pdf.to_s if @pb[3] %></div>
-        	    					<div class="span4"><%= link_to image_tag(@pb[4].image.to_s), @pb[4].pdf.to_s if @pb[4] %></div>
-    	        					<div class="span4"><%= link_to image_tag(@pb[5].image.to_s), @pb[5].pdf.to_s if @pb[5] %></div>
+            						<div class="span4"><%= link_to image_tag(@pb[3].image.to_s), @pb[3].pdf.to_s, target: '_blank' if @pb[3] %></div>
+        	    					<div class="span4"><%= link_to image_tag(@pb[4].image.to_s), @pb[4].pdf.to_s, target: '_blank' if @pb[4] %></div>
+    	        					<div class="span4"><%= link_to image_tag(@pb[5].image.to_s), @pb[5].pdf.to_s, target: '_blank' if @pb[5] %></div>
 					            </div>
 					            <%end%>
 				            	<%if @pb.size>6%>
             					<div class="item">
-            						<div class="span4"><%= link_to image_tag(@pb[6].image.to_s), @pb[6].pdf.to_s if @pb[6] %></div>
-        	    					<div class="span4"><%= link_to image_tag(@pb[7].image.to_s), @pb[7].pdf.to_s if @pb[7] %></div>
-    	        					<div class="span4"><%= link_to image_tag(@pb[8].image.to_s), @pb[8].pdf.to_s if @pb[8] %></div>
+            						<div class="span4"><%= link_to image_tag(@pb[6].image.to_s), @pb[6].pdf.to_s, target: '_blank' if @pb[6] %></div>
+        	    					<div class="span4"><%= link_to image_tag(@pb[7].image.to_s), @pb[7].pdf.to_s, target: '_blank' if @pb[7] %></div>
+    	        					<div class="span4"><%= link_to image_tag(@pb[8].image.to_s), @pb[8].pdf.to_s, target: '_blank' if @pb[8] %></div>
 					            </div>
 					            <%end%>
 				            </div>
@@ -86,7 +86,7 @@
 			</div>
 
 			<div class="span6 offset1 text">
-			<p>veja <%= link_to 'aqui', 'http://www.touroperator.com.br/portal/stz04/default.asp?ids=MMCAYY'%> mais ofertas de viagem que temos para voce...</p>			
+			<p>veja <%= link_to 'aqui', 'http://www.touroperator.com.br/portal/stz04/default.asp?ids=MMCAYY', target: '_blank'%> mais ofertas de viagem que temos para voce...</p>			
 			</div>
 			
 		</div>
