--- a/app/views/profiles/edit.html.erb
+++ b/app/views/profiles/edit.html.erb
@@ -1,10 +1,11 @@
+<% provide(:title, t(:administration)) %>
 <div class="row">
 	<div class="span12">
 		<div class="inner-box">
 			<% flash.each do |key, value| %>
 				<%= content_tag(:div, value, class: "alert alert-#{key}") %>
 			<% end %>  
-			<h1>Editando perfil</h1>
+			<h1><%=t(:profile)%></h1>
 			<%= render 'form' %>
 
 		</div>
