--- a/app/views/packs/edit.html.erb
+++ b/app/views/packs/edit.html.erb
@@ -1,7 +1,9 @@
+<% provide(:title, t(:administration)) %>
 <div class="row">
 	<div class="span12">
 		<div class="inner-box">
-			<h1>Editando pacote</h1>
+			<h1><%=t(:packages)%></h1>
+			<legend><%=t(:edit_pack)%></legend>
 
 			<%= render 'form' %>
 
